fix x scroll visibility

--- a/assets/less/4_sections/sec_gallery.less
+++ b/assets/less/4_sections/sec_gallery.less
@@ -10,6 +10,7 @@
     height: 100%;
     font-size: 0;
     white-space: nowrap;
+    overflow: auto;
   }
 
   &__col {
